--- a/config/database.yml
+++ b/config/database.yml
@@ -4,32 +4,30 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
+
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  timeout: 5000
 
-development:
-  <<: *default
-  database: db/development.sqlite3
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test: &test
   <<: *default
-  database: db/test.sqlite3
 
-production:
-  <<: *default
-  database: db/production.sqlite3
+development:
+  adapter: postgresql
+  encoding: unicode
+  database: postgres
+  pool: 5
+  username: burak
+  password:
 
 cucumber:
   <<: *test
 
-development:
-  adapter: postgresql
-  host: 'ec2-54-225-157-157.compute-1.amazonaws.com'
-  username: 'llxaabzuyauvni'
-  database: 'dd6sn5903aaap4'
-  password: '5SopTzuz1tUr9jBp9WSy4ULPD3'
+#development:
+#  adapter: postgresql
+#  host: 'ec2-54-225-157-157.compute-1.amazonaws.com'
+#  username: 'llxaabzuyauvni'
+#  database: 'dd6sn5903aaap4'
+#  password: '5SopTzuz1tUr9jBp9WSy4ULPD3'
