commit for demo

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,6 @@ default: &default
   encoding: unicode
   pool: 5
 
-
 test: &test
   <<: *default
 
@@ -25,9 +24,9 @@ development:
 cucumber:
   <<: *test
 
-production:
- adapter: postgresql
- host: 'ec2-54-225-157-157.compute-1.amazonaws.com'
- username: 'llxaabzuyauvni'
- database: 'dd6sn5903aaap4'
- password: '5SopTzuz1tUr9jBp9WSy4ULPD3'
+#production:
+# adapter: postgresql
+# host: 'ec2-54-225-157-157.compute-1.amazonaws.com'
+# username: 'llxaabzuyauvni'
+# database: 'dd6sn5903aaap4'
+# password: '5SopTzuz1tUr9jBp9WSy4ULPD3'
